# rust.heroes.api

./: .editorconfig  .env  .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml
api/: Insomnia_Hero_Api.json
hero-db/scripts/: create.sql
migrations/2019-03-10-120642_hero/: down.sql  up.sql
src/: db.rs  hero.rs  main.rs  schema.rs
