[package]
name = "hero-api"
version = "0.1.0"
authors = ["Nicolas Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]