[package]
name = "hero-api"
version = "0.1.0"
authors = ["Nicolas Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.1", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.13.0"
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
